<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:paddingRight="12dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_rank"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/dimen_13" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/app_uid"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/dimen_13" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/app_pledge_nums"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/dimen_13" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|right"
            android:text="@string/app_join_time"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/dimen_13" />

    </LinearLayout>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/dimen_12" />


            <TextView
                android:id="@+id/tvNoContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="105dp"
                android:drawableTop="@drawable/app_no_content"
                android:drawablePadding="15dp"
                android:gravity="center"
                android:text="@string/app_no_content_now"
                android:textColor="@color/text_color_2"
                android:textSize="14dp"
                android:visibility="gone" />
        </RelativeLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>