<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ff_ff_ff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/app_layout_top_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/color_f2_f2_f2" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="23dp"
        android:text="@string/app_observer_link"
        android:textColor="@color/text_color_2"
        android:textSize="@dimen/dimen_15" />


    <EditText
        android:id="@+id/etObserverLink"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/shape_f8f8f9_8"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_observer_link"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/text_color_1"
        android:textColorHint="@color/text_color_4"
        android:textSize="@dimen/dimen_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:paddingLeft="24dp"
        android:text="@string/app_observer_remark"
        android:textColor="@color/text_color_2"
        android:textSize="@dimen/dimen_15" />


    <EditText
        android:id="@+id/etObserverRemark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/shape_f8f8f9_8"
        android:gravity="center_vertical"
        android:hint="@string/app_please_input_observer_remark"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/text_color_1"
        android:textColorHint="@color/text_color_4"
        android:textSize="@dimen/dimen_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_6961f3_9"
        android:gravity="center"
        android:text="@string/app_sure"
        android:textColor="@color/text_color_3"
        android:textSize="@dimen/dimen_16"
        android:textStyle="bold" />


</LinearLayout>