<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_theme"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/app_layout_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/app_login_logo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_30"
                android:text="@string/app_email"
                android:textColor="@color/text_color_2"
                android:textSize="@dimen/dimen_15" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@drawable/shape_f6f6f6_8"
                android:gravity="center_vertical"
                android:hint="@string/app_please_input_email"
                android:paddingLeft="@dimen/dimen_21"
                android:paddingRight="@dimen/dimen_21"
                android:singleLine="true"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/text_color_4"
                android:textSize="@dimen/dimen_16" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_25"
                android:text="@string/app_password"
                android:textColor="@color/text_color_2"
                android:textSize="@dimen/dimen_15" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@drawable/shape_f6f6f6_8"
                android:gravity="center_vertical"
                android:hint="@string/app_please_input_login_psw"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimen_21"
                android:paddingRight="@dimen/dimen_21"
                android:singleLine="true"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/text_color_4"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:id="@+id/tvForgetPsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_16"
                android:text="@string/app_forget_psw"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/dimen_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/app_verify_code"
                android:textColor="@color/text_color_2"
                android:textSize="@dimen/dimen_15" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@drawable/shape_f6f6f6_8"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etVerCode"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/app_input_pic_code"
                    android:paddingLeft="@dimen/dimen_21"
                    android:paddingRight="@dimen/dimen_21"
                    android:singleLine="true"
                    android:textColor="@color/text_color_1"
                    android:textColorHint="@color/text_color_4"
                    android:textSize="@dimen/dimen_16" />

                <View
                    android:id="@+id/ivPicCode"
                    android:layout_width="82dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/dimen_6" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_60"
                android:layout_marginRight="@dimen/dimen_16"
                android:background="@drawable/shape_common_disable_btn_8"
                android:gravity="center"
                android:text="@string/app_login"
                android:textColor="@color/text_color_3"
                android:textSize="@dimen/dimen_17" />

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_no_account"
                    android:textColor="@color/text_color_2"
                    android:textSize="@dimen/dimen_15" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_register_soon"
                    android:textColor="@color/text_color_5"
                    android:textSize="@dimen/dimen_15" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>